[gd_scene load_steps=3 format=3 uid="uid://8iu4enercdw6"]

[ext_resource type="Script" path="res://editor/vector2i_editor.gd" id="1_4kdyj"]
[ext_resource type="PackedScene" uid="uid://0p07nc8e2mwo" path="res://editor/int_editor.tscn" id="2_o866d"]

[node name="Vector2iEditor" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
columns = 2
script = ExtResource("1_4kdyj")

[node name="IntEditor" parent="." instance=ExtResource("2_o866d")]
layout_mode = 2

[node name="IntEditor2" parent="." instance=ExtResource("2_o866d")]
layout_mode = 2
